<?xml version="1.0"?>
<package format="2">
    <name>f1_description</name>
    <version>0.0.0</version>
    <description>The f1_description package</description>

    <maintainer email="b1@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>

</package>
